# AutoCoder_Toolkit

./: README.md  pyproject.toml
auto_code_toolkit/: main.py
auto_coder_toolkit/: main.py
autocoder_toolkit/: __init__.py  main.py
autocoder_toolkit/pipelines/: pipelines.py
autocoder_toolkit/prompts/: __init__.py  prompts.py
autocoder_toolkit/tasks/: meta_tasks.py  tasks.py
autocoder_toolkit/utils/: __init__.py  constants.py  utils.py
autocoder_toolkit/utils/error_handling/: __init__.py  llm_error_handling.py
code_translator/: main.py
code_translator/utils/: utils.py
docs/: _dev_notes.md
