[tool.poetry]
name = "code-translator"
version = "0.1.0"
description = ""
authors = ["estill01 <ehs.stillman@gmail.com>"]
readme = "README.md"
packages = [{include = "code_translator"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
