[tool.poetry]
name = "auto_code_toolkit"
version = "0.1.0"
description = ""
authors = ["estill01 <ehs.stillman@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_code_toolkit"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.2"
python-dotenv = "^1.0.0"
tiktoken = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
